--- a/website/assets/css/main.scss
+++ b/website/assets/css/main.scss
@@ -2,8 +2,20 @@
 ---
 
 @import "mahout";
-
-
+// .main-sidebar{
+//   display: none;
+//  }
+//  .bottom-panel{
+//    display: block;
+//  }
+// @media (max-width: 991px) {
+// .main-sidebar{
+//  display: none;
+// }
+// .bottom-panel{
+//   display: block;
+// }
+// }
 .rounded-circle{
   height: 200px;
 }
